--- a/src/classes/_hu-border-width.scss
+++ b/src/classes/_hu-border-width.scss
@@ -4,7 +4,7 @@ $hu-border-width-parents: hu-get-class-modules($hu-border-width-modules, parents
 
 @each $module in hu-format-modules($hu-border-width-core-modules) {
   @each $type, $value in $hu-border-width-types {
-    @each $side-type, $side-properties in $hu-border-color-sides {
+    @each $side-type, $side-properties in $hu-border-width-sides {
       $side-properties: if($side-properties, $side-properties, $side-type);
       $class-name: hu-class-name("#{$side-type}-width:#{$type}");
       $value: if($value, $value, $type);
@@ -22,13 +22,14 @@ $hu-border-width-parents: hu-get-class-modules($hu-border-width-modules, parents
   @each $mq-scale, $mq-value in $hu-media-queries {
     @include hu-media-query($mq-value) {
       @each $type, $value in $hu-border-width-types {
-        @each $side-type, $side-properties in $hu-border-color-sides {
+        @each $side-type, $side-properties in $hu-border-width-sides {
           $side-properties: if($side-properties, $side-properties, $side-type);
           $class-name: hu-class-name("#{$side-type}-width:#{$type}");
+          $value: if($value, $value, $type);
 
           @include hu-responsive($class-name, $hu-border-width-core-modules, $mq-scale) {
             @each $property in $side-properties {
-              #{$property}: $value #{hu-important()};
+              #{$property}-width: $value #{hu-important()};
             }
           }
         }
@@ -40,7 +41,7 @@ $hu-border-width-parents: hu-get-class-modules($hu-border-width-modules, parents
 @if ($hu-border-width-pseudos) {
   @each $module in hu-format-modules($hu-border-width-core-modules) {
     @each $type, $value in $hu-border-width-types {
-      @each $side-type, $side-properties in $hu-border-color-sides {
+      @each $side-type, $side-properties in $hu-border-width-sides {
         $side-properties: if($side-properties, $side-properties, $side-type);
         $class-name: hu-class-name("#{$side-type}-width:#{$type}");
         $value: if($value, $value, $type);
@@ -58,13 +59,14 @@ $hu-border-width-parents: hu-get-class-modules($hu-border-width-modules, parents
     @each $mq-scale, $mq-value in $hu-media-queries {
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-border-width-types {
-          @each $side-type, $side-properties in $hu-border-color-sides {
+          @each $side-type, $side-properties in $hu-border-width-sides {
             $side-properties: if($side-properties, $side-properties, $side-type);
             $class-name: hu-class-name("#{$side-type}-width:#{$type}");
+            $value: if($value, $value, $type);
 
             @include hu-pseudo-responsive($class-name, $hu-border-width-pseudos, $hu-border-width-core-modules, $mq-scale) {
               @each $property in $side-properties {
-                #{$property}: $value #{hu-important()};
+                #{$property}-width: $value #{hu-important()};
               }
             }
           }
@@ -77,7 +79,7 @@ $hu-border-width-parents: hu-get-class-modules($hu-border-width-modules, parents
 @if ($hu-border-width-parents) {
   @each $module in hu-format-modules($hu-border-width-core-modules) {
     @each $type, $value in $hu-border-width-types {
-      @each $side-type, $side-properties in $hu-border-color-sides {
+      @each $side-type, $side-properties in $hu-border-width-sides {
         $side-properties: if($side-properties, $side-properties, $side-type);
         $class-name: hu-class-name("#{$side-type}-width:#{$type}");
         $value: if($value, $value, $type);
@@ -94,13 +96,15 @@ $hu-border-width-parents: hu-get-class-modules($hu-border-width-modules, parents
   @if (index($hu-border-width-core-modules, responsive)) {
     @each $mq-scale, $mq-value in $hu-media-queries {
       @include hu-media-query($mq-value) {
-        @each $scale, $value in $hu-border-width-scale {
-          @each $type, $properties in $hu-border-width-types {
+        @each $type, $value in $hu-border-width-types {
+          @each $side-type, $side-properties in $hu-border-width-sides {
+            $side-properties: if($side-properties, $side-properties, $side-type);
             $class-name: hu-class-name("#{$side-type}-width:#{$type}");
+            $value: if($value, $value, $type);
 
             @include hu-parent-responsive($class-name, $hu-border-width-parents, $hu-border-width-core-modules, $mq-scale) {
               @each $property in $side-properties {
-                #{$property}: $value #{hu-important()};
+                #{$property}-width: $value #{hu-important()};
               }
             }
           }
