Add :visited and :active support with correct LVHA ordering

--- a/src/mixins/_hu-generic.scss
+++ b/src/mixins/_hu-generic.scss
@@ -8,6 +8,12 @@
       }
     }
 
+    @else if ($module == visited) {
+      .#{hu-escape-class-name("&:visited")}--#{$class-name}:visited {
+        @content;
+      }
+    }
+
     @else if ($module == focus) {
       #{$hu-focus-parent} .#{hu-escape-class-name("&:focus")}--#{$class-name}#{$hu-focus-pseudo} {
         @content;
@@ -23,6 +29,12 @@
     @else if ($module == hocus) {
       #{$hu-focus-parent} .#{hu-escape-class-name("&:hocus")}--#{$class-name}#{$hu-focus-pseudo},
       .#{hu-escape-class-name("&:hocus")}--#{$class-name}:hover {
+        @content;
+      }
+    }
+
+    @else if ($module == active) {
+      .#{hu-escape-class-name("&:active")}--#{$class-name}:active {
         @content;
       }
     }
