--- a/src/mixins/_hu-pseudo.scss
+++ b/src/mixins/_hu-pseudo.scss
@@ -9,6 +9,12 @@
         }
       }
 
+      @else if ($module == visited) {
+        .#{hu-escape-class-name("&:visited")}#{$pseudo-class-name}--#{$class-name}:visited#{$pseudo} {
+          @content;
+        }
+      }
+
       @else if ($module == focus) {
         #{$hu-focus-parent} .#{hu-escape-class-name("&:focus")}#{$pseudo-class-name}--#{$class-name}#{$hu-focus-pseudo}#{$pseudo} {
           @content;
@@ -24,6 +30,12 @@
       @else if ($module == hocus) {
         #{$hu-focus-parent} .#{hu-escape-class-name("&:hocus")}#{$pseudo-class-name}--#{$class-name}#{$hu-focus-pseudo}#{$pseudo},
         .#{hu-escape-class-name("&:hocus")}#{$pseudo-class-name}--#{$class-name}:hover#{$pseudo} {
+          @content;
+        }
+      }
+
+      @else if ($module == active) {
+        .#{hu-escape-class-name("&:active")}#{$pseudo-class-name}--#{$class-name}:active#{$pseudo} {
           @content;
         }
       }
