--- a/src/variables/classes/_hu-background-color.scss
+++ b/src/variables/classes/_hu-background-color.scss
@@ -1,5 +1,5 @@
 $hu-background-color-alias: "" !default;
 
-$hu-background-color-modules: (base, hocus, group-hocus, group-state, state) !default;
+$hu-background-color-modules: (base, visited, hocus, active, group-hocus, group-state, state) !default;
 
 $hu-background-color-types: $hu-colors !default;
