--- a/src/variables/classes/_hu-text-decoration.scss
+++ b/src/variables/classes/_hu-text-decoration.scss
@@ -1,6 +1,6 @@
 $hu-text-decoration-alias: "" !default;
 
-$hu-text-decoration-modules: (base, hocus) !default;
+$hu-text-decoration-modules: (base, visited, hocus, active) !default;
 
 $hu-text-decoration-types: (
   line-through,
