--- a/src/classes/_hu-svg-fill-color.scss
+++ b/src/classes/_hu-svg-fill-color.scss
@@ -1,10 +1,10 @@
-$hu-svg-fill-color-core-modules: hu-get-class-modules($hu-svg-fill-color-modules, core, $hu-svg-fill-color-modules);
+$hu-svg-fill-color-core-modules: hu-format-modules(hu-get-class-modules($hu-svg-fill-color-modules, core, $hu-svg-fill-color-modules));
 $hu-svg-fill-color-pseudos: hu-get-class-modules($hu-svg-fill-color-modules, pseudos, null);
 $hu-svg-fill-color-parents: hu-get-class-modules($hu-svg-fill-color-modules, parents, null);
 $hu-svg-fill-color-property-name: fill;
 $hu-svg-fill-color-class-name: hu-get-class-name(($hu-svg-fill-color-alias: $hu-svg-fill-color-property-name));
 
-@each $module in hu-format-modules($hu-svg-fill-color-core-modules) {
+@each $module in $hu-svg-fill-color-core-modules {
   @each $hue, $colors in $hu-svg-fill-color-types {
     @each $scale, $value in $colors {
       $class-name: hu-class-name("#{$hu-svg-fill-color-class-name}:#{$hue}-#{$scale}");
@@ -33,7 +33,7 @@ $hu-svg-fill-color-class-name: hu-get-class-name(($hu-svg-fill-color-alias: $hu-
 }
 
 @if ($hu-svg-fill-color-pseudos) {
-  @each $module in hu-format-modules($hu-svg-fill-color-core-modules) {
+  @each $module in $hu-svg-fill-color-core-modules {
     @each $hue, $colors in $hu-svg-fill-color-types {
       @each $scale, $value in $colors {
         $class-name: hu-class-name("#{$hu-svg-fill-color-class-name}:#{$hue}-#{$scale}");
@@ -63,7 +63,7 @@ $hu-svg-fill-color-class-name: hu-get-class-name(($hu-svg-fill-color-alias: $hu-
 }
 
 @if ($hu-svg-fill-color-parents) {
-  @each $module in hu-format-modules($hu-svg-fill-color-core-modules) {
+  @each $module in $hu-svg-fill-color-core-modules {
     @each $hue, $colors in $hu-svg-fill-color-types {
       @each $scale, $value in $colors {
         $class-name: hu-class-name("#{$hu-svg-fill-color-class-name}:#{$hue}-#{$scale}");
