--- a/src/classes/_hu-scale.scss
+++ b/src/classes/_hu-scale.scss
@@ -1,10 +1,10 @@
-$hu-scale-core-modules: hu-get-class-modules($hu-scale-modules, core, $hu-scale-modules);
+$hu-scale-core-modules: hu-format-modules(hu-get-class-modules($hu-scale-modules, core, $hu-scale-modules));
 $hu-scale-pseudos: hu-get-class-modules($hu-scale-modules, pseudos, null);
 $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
 $hu-scale-property-name: transform;
 $hu-scale-class-name: hu-get-class-name(($hu-scale-alias: $hu-scale-property-name));
 
-@each $module in hu-format-modules($hu-scale-core-modules) {
+@each $module in $hu-scale-core-modules {
   @each $type, $value in $hu-scale-types {
     $class-name: hu-class-name("#{$hu-scale-class-name}:#{$type}");
     $value: if($value, $value, $type);
@@ -20,7 +20,6 @@ $hu-scale-class-name: hu-get-class-name(($hu-scale-alias: $hu-scale-property-nam
     @include hu-media-query($mq-value) {
       @each $type, $value in $hu-scale-types {
         $class-name: hu-class-name("#{$hu-scale-class-name}:#{$type}");
-        $property: scale;
         $value: if($value, $value, $type);
 
         @include hu-responsive($class-name, $hu-scale-core-modules, $mq-scale) {
@@ -32,7 +31,7 @@ $hu-scale-class-name: hu-get-class-name(($hu-scale-alias: $hu-scale-property-nam
 }
 
 @if ($hu-scale-pseudos) {
-  @each $module in hu-format-modules($hu-scale-core-modules) {
+  @each $module in $hu-scale-core-modules {
     @each $type, $value in $hu-scale-types {
       $class-name: hu-class-name("#{$hu-scale-class-name}:#{$type}");
       $value: if($value, $value, $type);
@@ -48,7 +47,6 @@ $hu-scale-class-name: hu-get-class-name(($hu-scale-alias: $hu-scale-property-nam
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-scale-types {
           $class-name: hu-class-name("#{$hu-scale-class-name}:#{$type}");
-          $property: scale;
           $value: if($value, $value, $type);
 
           @include hu-pseudo-responsive($class-name, $hu-scale-pseudos, $hu-scale-core-modules, $mq-scale) {
@@ -61,7 +59,7 @@ $hu-scale-class-name: hu-get-class-name(($hu-scale-alias: $hu-scale-property-nam
 }
 
 @if ($hu-scale-parents) {
-  @each $module in hu-format-modules($hu-scale-core-modules) {
+  @each $module in $hu-scale-core-modules {
     @each $type, $value in $hu-scale-types {
       $class-name: hu-class-name("#{$hu-scale-class-name}:#{$type}");
       $value: if($value, $value, $type);
@@ -77,7 +75,6 @@ $hu-scale-class-name: hu-get-class-name(($hu-scale-alias: $hu-scale-property-nam
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-scale-types {
           $class-name: hu-class-name("#{$hu-scale-class-name}:#{$type}");
-          $property: scale;
           $value: if($value, $value, $type);
 
           @include hu-parent-responsive($class-name, $hu-scale-parents, $hu-scale-core-modules, $mq-scale) {
